code cleaning and refactor

--- a/src/main/resources/css/common.css
+++ b/src/main/resources/css/common.css
@@ -1,4 +1,4 @@
-body, div, a, p, header, nav, aside, main, section, ol {
+body, div, a, p, header, nav, aside, main, section, ol, iframe {
     margin: 0;
     padding: 0;
     border: 0;
