--- a/src/main/resources/layout.css
+++ b/src/main/resources/layout.css
@@ -24,6 +24,10 @@ body {
     grid-template-rows: 6rem 1.5rem auto;
 }
 
+body.empty-aside {
+    grid-template-columns: 1rem auto;
+}
+
 
 header {
     display: flex;
@@ -173,6 +177,19 @@ section {
 section p {
     text-align: justify;
 }
+section pre {
+    overflow-x: auto;
+}
+
+section.embedded {
+    padding: 0;
+    margin: 0;
+}
+section.embedded > iframe {
+    width: 100%;
+    height: 100%;
+}
+
 
 .label {
     color: var(--menu-foreground-color);
@@ -249,7 +266,7 @@ a.label:hover {
 
 
 @media (max-width: 500px) {
-    body {
+    body, body.empty-aside {
         grid-template-columns: auto;
         grid-template-rows: 6rem 1rem auto;
         grid-template-areas:
