--- a/src/main/resources/css/style.css
+++ b/src/main/resources/css/style.css
@@ -9,6 +9,7 @@ html, body { height: 100%; }
 html {
     font-family: sans-serif;
     font-size: inherit;
+    overflow: hidden;
 }
 
 table {
@@ -89,6 +90,7 @@ header > nav {
     align-items: center;
     border-top: solid var(--menu-decoration-color);
     border-top-width: 0;
+    margin-left: auto;
 }
 header > nav > ul {
     display: flex;
@@ -116,6 +118,7 @@ header > nav > ul > li:hover > ul, header > nav > ul > li:focus-within > ul {
     padding-left: 0;
     border: 0.1em solid var(--menu-bold-background-color);
     background: var(--menu-regular-background-color);
+    max-width: 15em;
 }
 
 
@@ -263,6 +266,7 @@ div.footer {
     }
     header .title-and-subtitle {
         justify-content: center;
+
     }
     header .title {
         font-size: 1.5rem;
@@ -274,6 +278,7 @@ div.footer {
     header > nav {
         justify-content: space-evenly;
         border-top-width: 0.1em;
+        margin-left: inherit;
     }
     header > nav > ul {
         margin: 0;
@@ -283,6 +288,11 @@ div.footer {
     header > nav > ul > li:hover > ul, header > nav > ul > li:focus-within > ul {
         top: 5.5rem
     }
+
+    header .company {
+        display: none;
+    }
+
     .breadcrumbs {
         font-size: 0.7em
     }
