--- a/src/main/resources/css/style.css
+++ b/src/main/resources/css/style.css
@@ -46,7 +46,7 @@ body {
         'breadcrumbs breadcrumbs'
         'aside       section';
     grid-template-columns: 1fr 7fr;
-    grid-template-rows: auto 1.5rem auto;
+    grid-template-rows: 6rem 1.5rem auto;
 }
 
 body.empty-aside {
@@ -91,7 +91,7 @@ header > nav {
     border-top: solid var(--menu-decoration-color);
     border-top-width: 0;
     margin-left: auto;
-    overflow-x: scroll;
+    overflow-y: hidden;
 }
 header > nav > ul {
     display: flex;
@@ -122,6 +122,12 @@ header > nav > ul > li:hover > ul, header > nav > ul > li:focus-within > ul {
     max-width: 15em;
 }
 
+header .company img {
+    max-height: 4rem;
+}
+header .company .label:hover {
+     background: var(--menu-regular-background-color);
+}
 
 
 
@@ -259,7 +265,7 @@ div.footer {
 @media (max-width: 900px) {
     body {
         grid-template-columns: 8rem auto;
-        grid-template-rows: auto 1rem auto;
+        grid-template-rows: 6rem 1rem auto;
         grid-template-areas:
             'header      header'
             'breadcrumbs breadcrumbs'
@@ -267,6 +273,7 @@ div.footer {
     }
     header {
         flex-direction: column;
+        justify-content: space-evenly;
     }
     header .title-and-subtitle {
         justify-content: center;
@@ -283,6 +290,8 @@ div.footer {
         justify-content: space-evenly;
         border-top-width: 0.1em;
         margin-left: inherit;
+        overflow-y: scroll;
+        padding-top: 0.2em;
     }
     header > nav > ul {
         margin: 0;
@@ -298,11 +307,11 @@ div.footer {
     }
 
     .breadcrumbs {
-        font-size: 0.7em
+        font-size: 0.7em;
     }
     .label {
-        padding: .3em .8em .3em .8em
-        font-size: 0.7em
+        padding: 0.2em 0.8em 0.3em 0.8em;
+        font-size: 0.8em;
     }
     aside {
         font-size: 0.8em;
@@ -320,7 +329,7 @@ div.footer {
 @media (max-width: 500px) {
     body, body.empty-aside {
         grid-template-columns: auto;
-        grid-template-rows: auto 1rem auto;
+        grid-template-rows: 6rem 1rem auto;
         grid-template-areas:
             'header'
             'breadcrumbs'
